# EVM

./: BigChar.cpp  BigChar.hpp  CMakeLists.txt  command.cpp  command.hpp  hi.cpp  memory.cpp  memory.hpp  regist.cpp  regist.hpp  terminal.cpp  terminal.hpp
